[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DMGPT4"
version = "0.0.1"
authors = [{name = "Ondřej Moravec", email = "moravec@devground.cz"}]
description = "GPT-4 in the role of a dungeon master will take two players on a journey through a short dungeon.
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/hkcmoris/DMGPT4"
"Bugtracker" = "https://github.com/hkcmoris/DMGPT4/issues"
